2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	include/functions_treeview.php: Fixed bad link on
	agent info of the right side in treeview on metaconsole.
	And added access to node check to this link.
	For bug #2312

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/stat_win.php: Change the order of jquery
	include file to avoid errors

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed access to 
	events from graphics in metaconsole for bug #2335

2013-07-22  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_module_interval_factor.php
	include/help/es/help_module_interval_factor.php
	godmode/agentes/module_manager_editor_common.php: Change the
	input field of module interval on data modules form by 
	a non editable info and improve the help explaining deeply the
	way of change the interval and how to do it. For bug #2308

	* images/cancel.png
	godmode/massive/massive_operations.php: Add missed icon
	and change another one

2013-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_profiles.php: Fix massive
	deletion of profiles (ajax retrieving) for bug #2309

2013-07-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Add check to avoid SQL
	errors when retrieve alerts and the user profiles
	are not properly configurated for bug #2349

2013-07-18  Sergio Martin <sergio.martin@artica.es>

	* operation/reporting/reporting_viewer.php
	images/report_list.png
	godmode/events/event_edit_filter.php
	godmode/reporting/reporting_builder.php: Fix the manage
	tabs wich appeared in the view report section even when 
	the user hasnt RW permissions for bug #2347
	Added some new buttons and icon to make more usable the
	reports section

2013-07-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fixed the access to the
	module graph from events view on metaconsole for bug
	#2344
